--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Hacker-Blog
 description: "A Jekyll Blog Theme For Hackers"
 author:
-  name: "SomeHacker"
-  email: "someone@somewebsite.somedomain"
-  url: "https://ashishchaudhary.in/hacker-blog"
+  name: "Ishan Lakhwani"
+  email: "ishan.lakhwani@gmail.com"
+  url: "https://bluntbrain.github.io/blog/"
 
 baseurl: /
 
@@ -28,5 +28,5 @@ plugins:
   - jekyll-sitemap
 
 # Custom variables
-owner : "SomeHacker"
-year : "2020"
+owner : "bluntbrain"
+year : "2021"
