--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Hacker-Blog
-description: "A Jekyll Blog Theme For Hackers"
+title: Blog || Ishan Lakhwani
+description: "My personal blog"
 author:
   name: "Ishan Lakhwani"
   email: "ishan.lakhwani@gmail.com"
